Trying to fix overflow issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2987,7 +2987,10 @@ input, select, textarea {
 		}
 
 /* Spotlights */
-
+.image {
+	overflow: clip;
+}
+	
 	.spotlights > section {
 		display: -moz-flex;
 		display: -webkit-flex;
